# opus-rs

./: Cargo.toml  OPUS_PLAYBACK_GUIDE.md
examples/: opus_player_complete.rs  play_opus_file.rs
tests/: play_opus_file.rs
