[package]
name = "opus"
version = "0.3.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/SpaceManiac/opus-rs"
documentation = "https://docs.rs/opus/0.3.0/opus"

edition = "2015"

[dependencies]
audiopus_sys = "0.2.0"

# Optional dependencies for .opus file playback
# These are not required for the core opus encoding/decoding functionality
ogg = { version = "0.8", optional = true }
rodio = { version = "0.17", optional = true }

[features]
default = []
# Enable this feature to include .opus file playback capabilities
playback = ["ogg", "rodio"]
